hphp/hack/test/typecheck/assignment_sequencing/list_double_increment.php.exp
File "list_double_increment.php", line 6, characters 13-14:
Unsequenced modifications to local variable. Modified here (Typing[4144])
File "list_double_increment.php", line 6, characters 23-24:
And also modified here
