hphp/hack/test/typecheck/assignment_sequencing/list_double_increment.php
<?hh // strict

// Bad because writing to $x twice on LHS
function test(array<int> $a, array<int> $b): int {
  $x = 0;
  list($b[++$x], $b[++$x]) = $a;
  return $x;
}
